# Microsoft_Seal

./: README.md  he.cpp
SEAL/native/examples/: examples.cpp
TA_temp/: 220803@lg (실습).pptx  SEAL_Tutorial (1).ipynb  main.cpp  solution.cpp
paper_project/pailliercrypto/: LICENSE  README.md  help.sh
paper_project/pailliercrypto/libapcs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libapcs.cpp  libapcs.h  test.cpp  time.cpp
practice_seal/: CMakeCache.txt  CmakeLists.txt  Makefile  b.c  cmake_install.cmake  foo
